Deleted cell output in ipynb.

--- a/Merging data.ipynb
+++ b/Merging data.ipynb
@@ -40,48 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/_libs/__init__.py:4: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from .tslib import iNaT, NaT, Timestamp, Timedelta, OutOfBoundsDatetime\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/__init__.py:26: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import (hashtable as _hashtable,\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/core/dtypes/common.py:6: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import algos, lib\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/core/util/hashing.py:7: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import hashing, tslib\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/core/indexes/base.py:7: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import (lib, index as libindex, tslib as libts,\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/tseries/offsets.py:21: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  import pandas._libs.tslibs.offsets as liboffsets\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/core/ops.py:16: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import algos as libalgos, ops as libops\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/core/indexes/interval.py:32: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs.interval import (\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/core/internals.py:14: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import internals as libinternals\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/core/sparse/array.py:33: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  import pandas._libs.sparse as splib\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/core/window.py:36: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  import pandas._libs.window as _window\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/core/groupby/groupby.py:68: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import (lib, reduction,\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/core/reshape/reshape.py:30: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import algos as _algos, reshape as _reshape\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/io/parsers.py:45: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  import pandas._libs.parsers as parsers\n",
-      "/home/rusty/anaconda3/lib/python2.7/site-packages/pandas/io/pytables.py:50: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from pandas._libs import algos, lib, writers as libwriters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from clean_encounterids import *\n",
     "from parse_ICNARC_xml import *"
@@ -186,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "icnarc_data = icnarc_data.merge(merged_data, on=['ICNARC number', 'Unit ID'])"
@@ -221,7 +186,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "merged_data[~merged_data['ICNARC number'].isin(icnarc_data['ICNARC number'])] ## Output deleted for data protection."
@@ -255,7 +222,9 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def print_ww_philips_summary(df):\n",
@@ -367,7 +336,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "icnarc_data['bmi'] = icnarc_data['Weight in kg'].astype(float)/((icnarc_data['Height in cm'].astype(float)/100.0)**2)"
@@ -395,7 +366,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "no_outcome = icnarc_data[icnarc_data['Status at discharge from your hospital'].isna()]"
@@ -412,83 +385,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        2.7.1.13.3\n",
-       "1       2.11.1.27.1\n",
-       "2        1.3.5.30.1\n",
-       "3        2.3.9.28.1\n",
-       "4        1.1.5.27.2\n",
-       "5        2.6.8.34.5\n",
-       "6        1.3.3.39.1\n",
-       "7        2.7.1.13.1\n",
-       "8       1.3.10.27.6\n",
-       "9        1.3.9.39.1\n",
-       "10       2.1.2.30.1\n",
-       "11       2.1.2.27.1\n",
-       "12        2.1.4.6.1\n",
-       "13       2.2.1.30.1\n",
-       "14       1.7.3.39.1\n",
-       "15       1.3.6.39.2\n",
-       "16      2.2.12.35.4\n",
-       "17       2.4.2.33.1\n",
-       "18       1.3.9.39.1\n",
-       "19      2.2.12.35.2\n",
-       "20        2.6.8.1.2\n",
-       "21       1.3.2.15.1\n",
-       "22       1.3.7.27.1\n",
-       "23       2.9.2.25.1\n",
-       "24       2.1.4.27.5\n",
-       "25       2.1.4.27.1\n",
-       "26       1.1.4.39.1\n",
-       "27        2.1.4.6.1\n",
-       "28       2.7.1.13.4\n",
-       "29       1.3.9.39.1\n",
-       "           ...     \n",
-       "4801      2.4.2.7.3\n",
-       "4802      2.4.2.7.3\n",
-       "4803     1.3.5.41.4\n",
-       "4804     2.6.8.1.10\n",
-       "4805     2.1.2.30.1\n",
-       "4806     2.6.8.34.5\n",
-       "4807      2.4.2.7.3\n",
-       "4808     1.3.1.39.3\n",
-       "4809    1.10.2.56.2\n",
-       "4810     1.3.6.57.1\n",
-       "4811     2.7.1.13.1\n",
-       "4812      2.4.2.7.3\n",
-       "4813     2.1.10.7.3\n",
-       "4814     2.6.8.34.9\n",
-       "4815     1.7.3.39.1\n",
-       "4816     1.1.9.56.1\n",
-       "4817     1.4.1.39.5\n",
-       "4818     2.7.1.27.1\n",
-       "4819     1.1.5.39.2\n",
-       "4820     1.1.4.39.1\n",
-       "4821     2.2.5.40.3\n",
-       "4822     1.3.5.30.3\n",
-       "4823     2.9.2.39.2\n",
-       "4824     1.3.6.30.1\n",
-       "4825     2.1.4.27.9\n",
-       "4826      2.4.2.7.3\n",
-       "4827     1.3.1.39.3\n",
-       "4828     1.3.5.30.5\n",
-       "4829     2.1.4.27.5\n",
-       "4830      2.4.2.7.3\n",
-       "Name: Primary reason for admission to your unit, Length: 4831, dtype: object"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "icnarc_data['Primary reason for admission to your unit']"
    ]
